# LIRC

./: .gitignore  CMakeLists.txt  README.md  callbacks.h  genschema.sh  main.c
schema/: schema.v0000.sql
